--- a/project-template/css/reg-form-css.css
+++ b/project-template/css/reg-form-css.css
@@ -1,30 +1,141 @@
-body {
-    background-color: blue;
-}
+@charset "UTF-8";
+@import url(font-awesome.min.css);
+@import url(http://fonts.googleapis.com/css?family=Raleway:700,400);
 
-section {
-    background-color: aqua;
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Raleway", Helvetica, sans-serif;
 }
 
-header {
-    background-color: chartreuse;
+div.image {
+    background-color: rgb(46, 53, 53);
+    width: 30%;
+    height: 100vh;
+    line-height: 60px;
+    text-align: center;
+    float: left;
+    background-image: linear-gradient(to top right,#080808, #717171, #ccc);
+}
+div.form {
+    
+    width: 70%;
+    height: 100vh;
+    text-align: center;
     float: right;
 }
 
-div {
-    background-color: brown;
-    margin: 0;
-    padding: 0;
+div p {
+    color: rgb(228, 222, 223);
+    font-size: 40px;
+    font-weight: bolder;
+    padding: 40px 20px;
+    margin: 40px 20px;
+    
 }
 
-img {
-    width: 480px;
-    left: 0;
-    top: 0;
-    position: fixed;
-    min-height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
+section.form-header {
+    position: relative;
 }
+
+#login-header {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    color: #717171;
+    font-weight: 100;
+    /* background-color: aquamarine; */
+}
+
+h1 button {
+    background-color: #2da2ca;
+    color: white;
+    font-size: medium;
+    padding: 14px 50px;
+    margin: 8px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 30px;
+    outline: none;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+div.wrapper_form {
+    padding-top: 140px;
+    margin: 0 auto;
+    width: 550px;
+    height: 100%;
+}
+
+div.formSL {
+    padding: 0 30px 0 30px;
+    position: relative;
+    margin: 0 auto;
+    text-align: left;
+    line-height: 40px;
+}
+div.formSL h2 {
+    padding-bottom: 10px;
+    font-size: 40px;
+    line-height: 70px;
+    font-weight: lighter;
+}
+
+input[type=email], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 10px;
+    outline: none;
+  }
+
+  input[type=password]:focus {
+      border: 3px solid #2da2ca;
+  }
+  input[type=email]:focus {
+      border : 3px solid #2da2ca;
+  }
+
+  label {
+      display: block;
+      font-weight: bold;
+      color: #717171;
+  }
+
+  form button {
+    background-color: #2da2ca;
+    border: none;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 30px;
+    outline: none;
+  }
+
+  form p {
+      font-size: medium;
+      font-weight: bold;
+      text-align: center;
+      color: #524e4e;
+      line-height: normal;
+      padding-top: 0;
+  }
+
+  span {
+      font-weight: bolder;
+      color: #080808;
+  }
+
+  span a {
+      color: rgb(199, 190, 190);
+      font-weight: 500;
+  }
